{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 34,
  "lineage": "1b7c2b8a-d238-f5c1-4b85-7cd3c0d9af30",
  "resources": [
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ebb7ad100f010a08",
            "association_id": "eipassoc-0528b074a3d8a6684",
            "domain": "vpc",
            "id": "eipalloc-0ebb7ad100f010a08",
            "instance": "i-0f6ce120fb80e02c5",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-016ea2d9653a78659",
            "private_dns": "ip-10-0-0-11.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.11",
            "public_dns": "ec2-13-125-45-244.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.45.244",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hangeun-dev-bastion-eip"
            },
            "tags_all": {
              "Name": "hangeun-dev-bastion-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.dev.aws_iam_instance_profile.bastion",
            "module.dev.aws_iam_role.bastion",
            "module.dev.aws_instance.bastion",
            "module.dev.aws_security_group.hangeun_bastion_ec2",
            "module.dev.aws_security_group.hangeun_bastion_from_rds",
            "module.dev.aws_subnet.public",
            "module.dev.aws_vpc.vpc",
            "module.dev.data.aws_iam_policy_document.ec2_assume_role"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0950b73c15d1c0926",
            "association_id": "eipassoc-0115d78cfb48e25d6",
            "domain": "vpc",
            "id": "eipalloc-0950b73c15d1c0926",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0ae1abb037bac84bc",
            "private_dns": "ip-10-0-0-47.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.47",
            "public_dns": "ec2-13-124-83-176.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.83.176",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hangeun-dev-natgw1-eip"
            },
            "tags_all": {
              "Name": "hangeun-dev-natgw1-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.dev.aws_internet_gateway.igw",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0462a914135d20297",
            "arn": "arn:aws:ec2:ap-northeast-2:228525850236:instance/i-0f6ce120fb80e02c5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "hangeun-dev-bastion-instanceprofile",
            "id": "i-0f6ce120fb80e02c5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "hangeun-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-016ea2d9653a78659",
            "private_dns": "ip-10-0-0-11.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.11",
            "public_dns": "ec2-43-201-64-227.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.201.64.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Name": "hangeun-dev-bastion-ec2"
                },
                "throughput": 125,
                "volume_id": "vol-0bd3d4665c6b48429",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0be7e153300185a23",
            "tags": {
              "Name": "hangeun-dev-bastion-ec2"
            },
            "tags_all": {
              "Name": "hangeun-dev-bastion-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05458943ad6cdb525",
              "sg-0bff6a04aeed54e74"
            ]
          },
          "dependencies": [
            "module.dev.aws_iam_instance_profile.bastion",
            "module.dev.aws_iam_role.bastion",
            "module.dev.aws_security_group.hangeun_bastion_ec2",
            "module.dev.aws_security_group.hangeun_bastion_from_rds",
            "module.dev.aws_subnet.public",
            "module.dev.aws_vpc.vpc",
            "module.dev.data.aws_iam_policy_document.ec2_assume_role"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:228525850236:internet-gateway/igw-0ee31e1e64526458a",
            "id": "igw-0ee31e1e64526458a",
            "owner_id": "228525850236",
            "tags": {
              "Name": "hangeun-dev-igw"
            },
            "tags_all": {
              "Name": "hangeun-dev-igw"
            },
            "vpc_id": "vpc-06509431dd15ec2bf"
          },
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0950b73c15d1c0926",
            "association_id": "eipassoc-0115d78cfb48e25d6",
            "connectivity_type": "public",
            "id": "nat-0c6be9b821602e61e",
            "network_interface_id": "eni-0ae1abb037bac84bc",
            "private_ip": "10.0.0.47",
            "public_ip": "13.124.83.176",
            "subnet_id": "subnet-0be7e153300185a23",
            "tags": {
              "Name": "hangeun-dev-natgw1"
            },
            "tags_all": {
              "Name": "hangeun-dev-natgw1"
            }
          },
          "dependencies": [
            "module.dev.aws_eip.nat_gateway",
            "module.dev.aws_internet_gateway.igw",
            "module.dev.aws_subnet.public",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:228525850236:network-acl/acl-06e5c0c92ee1ef3a9",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06e5c0c92ee1ef3a9",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "228525850236",
            "subnet_ids": [
              "subnet-070bd78927d374760",
              "subnet-0d8e8bf6a50becdcb"
            ],
            "tags": {
              "Name": "hangeun-dev-private1-nacl"
            },
            "tags_all": {
              "Name": "hangeun-dev-private1-nacl"
            },
            "vpc_id": "vpc-06509431dd15ec2bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_subnet.private1",
            "module.dev.aws_subnet.private2",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:228525850236:network-acl/acl-0bdbe2797027c8646",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0bdbe2797027c8646",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "228525850236",
            "subnet_ids": [
              "subnet-0be7e153300185a23"
            ],
            "tags": {
              "Name": "hangeun-dev-public-nacl"
            },
            "tags_all": {
              "Name": "hangeun-dev-public-nacl"
            },
            "vpc_id": "vpc-06509431dd15ec2bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_subnet.public",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08ec1daa36ed889e51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c6be9b821602e61e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08ec1daa36ed889e5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_eip.nat_gateway",
            "module.dev.aws_internet_gateway.igw",
            "module.dev.aws_nat_gateway.nat_gateway",
            "module.dev.aws_route_table.private",
            "module.dev.aws_subnet.public",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ee31e1e64526458a",
            "id": "r-rtb-00b7609dc9d2fa9b51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00b7609dc9d2fa9b5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_internet_gateway.igw",
            "module.dev.aws_route_table.public",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:228525850236:route-table/rtb-08ec1daa36ed889e5",
            "id": "rtb-08ec1daa36ed889e5",
            "owner_id": "228525850236",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c6be9b821602e61e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hangeun-dev-private-rtb"
            },
            "tags_all": {
              "Name": "hangeun-dev-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-06509431dd15ec2bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:228525850236:route-table/rtb-00b7609dc9d2fa9b5",
            "id": "rtb-00b7609dc9d2fa9b5",
            "owner_id": "228525850236",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ee31e1e64526458a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hangeun-dev-public-rtb"
            },
            "tags_all": {
              "Name": "hangeun-dev-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-06509431dd15ec2bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018a2d9201c5fe207",
            "route_table_id": "rtb-08ec1daa36ed889e5",
            "subnet_id": "subnet-070bd78927d374760"
          },
          "dependencies": [
            "module.dev.aws_route_table.private",
            "module.dev.aws_subnet.private1",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08355af049634fab2",
            "route_table_id": "rtb-08ec1daa36ed889e5",
            "subnet_id": "subnet-0d8e8bf6a50becdcb"
          },
          "dependencies": [
            "module.dev.aws_route_table.private",
            "module.dev.aws_subnet.private2",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0271543c0e1695785",
            "route_table_id": "rtb-00b7609dc9d2fa9b5",
            "subnet_id": "subnet-0be7e153300185a23"
          },
          "dependencies": [
            "module.dev.aws_route_table.public",
            "module.dev.aws_subnet.public",
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hangeun_bastion_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:228525850236:security-group/sg-0bff6a04aeed54e74",
            "description": "for bastion ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bff6a04aeed54e74",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "hangeun-dev-bastion-sg",
            "name_prefix": "",
            "owner_id": "228525850236",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hangeun-dev-bastion-sg"
            },
            "tags_all": {
              "Name": "hangeun-dev-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06509431dd15ec2bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hangeun_bastion_from_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:228525850236:security-group/sg-05458943ad6cdb525",
            "description": "bastion ec2 connect RDS",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06cbbe32cf61a752e"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-05458943ad6cdb525",
            "ingress": [],
            "name": "hangeun-dev-connection-bastion-rds-sg",
            "name_prefix": "",
            "owner_id": "228525850236",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06509431dd15ec2bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hangeun_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:228525850236:security-group/sg-049567653103753ca",
            "description": "for rds",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049567653103753ca",
            "ingress": [],
            "name": "hangeun-dev-rds-sg",
            "name_prefix": "",
            "owner_id": "228525850236",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hangeun-dev-rds-sg"
            },
            "tags_all": {
              "Name": "hangeun-dev-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06509431dd15ec2bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hangeun_rds_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:228525850236:security-group/sg-06cbbe32cf61a752e",
            "description": "bastion ec2 connect RDS",
            "egress": [],
            "id": "sg-06cbbe32cf61a752e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05458943ad6cdb525"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "hangeun-dev-connection-rds-bation-sg",
            "name_prefix": "",
            "owner_id": "228525850236",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06509431dd15ec2bf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_from_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3306,
            "id": "sgrule-25511385",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05458943ad6cdb525",
            "security_group_rule_id": "sgr-0dfeb511c679887fa",
            "self": false,
            "source_security_group_id": "sg-06cbbe32cf61a752e",
            "timeouts": null,
            "to_port": 3306,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_security_group.hangeun_bastion_from_rds",
            "module.dev.aws_security_group.hangeun_rds_from_bastion",
            "module.dev.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3306,
            "id": "sgrule-870403127",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06cbbe32cf61a752e",
            "security_group_rule_id": "sgr-0f62381efc3ac992a",
            "self": false,
            "source_security_group_id": "sg-05458943ad6cdb525",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.dev.aws_security_group.hangeun_bastion_from_rds",
            "module.dev.aws_security_group.hangeun_rds_from_bastion",
            "module.dev.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:228525850236:subnet/subnet-070bd78927d374760",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070bd78927d374760",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "228525850236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hangeun-dev-private1-subnet"
            },
            "tags_all": {
              "Name": "hangeun-dev-private1-subnet"
            },
            "vpc_id": "vpc-06509431dd15ec2bf"
          },
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:228525850236:subnet/subnet-0d8e8bf6a50becdcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8e8bf6a50becdcb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "228525850236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hangeun-dev-private2-subnet"
            },
            "tags_all": {
              "Name": "hangeun-dev-private2-subnet"
            },
            "vpc_id": "vpc-06509431dd15ec2bf"
          },
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:228525850236:subnet/subnet-0be7e153300185a23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be7e153300185a23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "228525850236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hangeun-dev-public-subnet"
            },
            "tags_all": {
              "Name": "hangeun-dev-public-subnet"
            },
            "vpc_id": "vpc-06509431dd15ec2bf"
          },
          "dependencies": [
            "module.dev.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.dev",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:228525850236:vpc/vpc-06509431dd15ec2bf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02e8dd13c3f51e58e",
            "default_route_table_id": "rtb-04871feeeb31f8df6",
            "default_security_group_id": "sg-0b135a342e9b682e2",
            "dhcp_options_id": "dopt-0ea94d84049cbb874",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06509431dd15ec2bf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04871feeeb31f8df6",
            "owner_id": "228525850236",
            "tags": {
              "Name": "hangeun-dev-vpc"
            },
            "tags_all": {
              "Name": "hangeun-dev-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}